# xbm-cli

./: .env.example  .gitignore  README.md  pyproject.toml
src/xbm/: __init__.py  api.py  auth.py  bookmarks.py  cli.py  formatters.py  oauth2.py  utils.py
tests/: test_bookmarks.py  test_formatters.py  test_oauth2.py  test_utils.py
